# benchmarks

go-fasthttp-pgx/: go.mod  go.sum  main.go
go-gorm/: Makefile  go.mod  go.sum  main.go
go-pgx/: go.mod  go.sum  main.go
nodejs-fastify-pg/: Makefile  main.js  package-lock.json  package.json
python-blacksheep-psyconpg/: Makefile  TODO  freeze.txt  main.py  requirements.txt
python-django/: Makefile  requirements.txt
python-django/main/: models.py  views.py
python-django/project/: settings.py  urls.py
python-fastapi-asyncpg/: requirements.txt
python-fastapi-psycopg/: freeze.txt  main.py  requirements.txt
python-sanic-asyncpg/: requirements.txt
python-sanic-psyconpg/: freeze.txt  main.py  requirements.txt
rust-actix-sqlx/: Cargo.toml  Makefile
rust-actix-sqlx/src/: main.rs
rust-actix-tokio-postgres/: Cargo.toml  Makefile
rust-actix-tokio-postgres/src/: main.rs
rust-axum-tokio-postgres/: Cargo.toml
rust-axum-tokio-postgres/src/: main.rs
rust-ntex-tokio-postgres/: Cargo.toml
rust-ntex-tokio-postgres/src/: main.rs
