[package]
name = "rust-actix-tokio-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv="0.15.0"
actix-web = "4.2"
dotenvy ="0.15.6"
tokio-postgres = "0.7.7"
deadpool-postgres = "0.10.3"
url="2.3.1"