[package]
name = "rust-ntex-tokio-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "0.5.31", features = ["glommio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv="0.15.0"
tokio-postgres = "0.7.7"
deadpool-postgres = "0.10.3"
